--- a/public/css/style.css
+++ b/public/css/style.css
@@ -410,6 +410,16 @@ li > a:only-child:after { content: ''; }
  font-size: 45px;
  text-transform: uppercase;	
 }
+.mid-price {
+font-size: 60px;
+color: #ffc168;
+    margin-top: 6px;
+    font-weight: 700;
+    padding-top: 0px;
+    font-family: Roboto,sans-serif;
+    border-left: 1px solid #fff;
+    border-right: 1px solid #fff;	
+}
 .agileinfo-logo h2 {
     color: #fff;
     display: inline-block;
