--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,15 +1,9 @@
-/*--
-Author: W3layouts
-Author URL: http://w3layouts.com
-License: Creative Commons Attribution 3.0 Unported
-License URL: http://creativecommons.org/licenses/by/3.0/
---*/
 html,
 body {
     margin: 0;
     font-size: 100%;
     background: #fff;
-	font-family: 'Alegreya Sans', sans-serif;
+	/* font-family: 'Alegreya Sans', sans-serif; */
 }
 
 html {
