--- a/public/css/style.css
+++ b/public/css/style.css
@@ -412,6 +412,11 @@ color: #ffc168;
     border-left: 1px solid #fff;
     border-right: 1px solid #fff;	
 }
+.mid-mid {
+background-color: #000000;
+border-color:#000000;
+color:#fff;
+}
 .agileinfo-logo h2 {
     color: #fff;
     display: inline-block;
