--- a/public/css/style.css
+++ b/public/css/style.css
@@ -412,7 +412,7 @@ color: #ffc168;
     border-left: 1px solid #fff;
     border-right: 1px solid #fff;	
 }
-.mid-mid {
+#mid-mid {
 background-color: #000000;
 border-color:#000000;
 color:#fff;
