--- a/public/css/style.css
+++ b/public/css/style.css
@@ -372,7 +372,8 @@ li > a:only-child:after { content: ''; }
 
 /*-- banner --*/
 .banner {
-    background: url(../images/bg.jpg) no-repeat center;
+    /*background: url(../images/bg.jpg) no-repeat center;*/
+	background: #676b6b;	
     background-size: cover;
 	position: relative;
 }
