--- a/public/css/style.css
+++ b/public/css/style.css
@@ -421,9 +421,34 @@ color: #ddd;
 }
 .mid-input {
 background-color: #dddddd1c;
-	border: 1px solid #ced4da1f;
-	color: #ddd;
+border: 1px solid #ced4da1f;
+color: #ddd;
 }
+.flag {
+border-bottom-right-radius: 1rem;
+    border-bottom-left-radius: 1rem;
+    position: relative;
+    text-align: center;
+    width: auto;
+    display: inline-block;
+    color: white;
+    box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 15px -3px;
+    background: rgb(24, 198, 131);
+    padding: 1rem;	
+}
+.flag::before {
+    content: "";
+    width: calc(100% + 20px);
+    height: 10px;
+    position: absolute;
+    left: -10px;
+    top: 0px;
+    border-bottom-left-radius: 8px;
+    border-top-left-radius: 8px;
+    border-bottom-right-radius: 8px;
+    border-top-right-radius: 8px;
+    background: inherit;
+}	
 .agileinfo-logo h2 {
     color: #fff;
     display: inline-block;
