--- a/public/css/style.css
+++ b/public/css/style.css
@@ -96,6 +96,7 @@ nav {
     font-weight: 600;
     padding: 3px 0;
     border: none;
+   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 #logo a span.fa {
     color: #ffc168;
