--- a/public/css/style.css
+++ b/public/css/style.css
@@ -352,8 +352,8 @@ li > a:only-child:after {
 
 .uper {
     border-radius: 7px;
-    background: #ffc168
-    padding-bottom:12px
+    background: #ffc168;
+    padding-bottom:12px;
 }
 .wall {
 padding:15px;
