--- a/public/css/style.css
+++ b/public/css/style.css
@@ -356,7 +356,7 @@ li > a:only-child:after {
     padding-bottom:12px;
 }
 .wall {
-padding:15px;
+padding-top:22px;
 }
 .eqo {
 font-size:28px;
@@ -473,7 +473,7 @@ padding:1.375rem 0.75rem;
 max-width:55%;
 font-size:2rem;
 }
-#calcl-md {
+#calcl-mid {
 background:#292929;
 border-color:#292929;
 color:#fff;
